--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0028)http://www.jetboystudio.com/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Jetboy Studio</title>
-<link href=".//site.css" media="all" rel="stylesheet">
+<link href="./assets/site.css" media="all" rel="stylesheet">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <style type="text/css">
