--- a/index.html
+++ b/index.html
@@ -1,27 +1,10 @@
-
-<!-- saved from url=(0028)http://www.jetboystudio.com/ -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Jetboy Studio</title>
-<link href="./assets/site.css" media="all" rel="stylesheet">
-
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <title>Jetboy Studio</title>
+  <link href="./assets/site.css" media="all" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<style type="text/css">
-    @font-face {
-        font-family: 'AvenirNextRegular';
-        src: url('chrome-extension://bmikpgodpkclnkgmnpphehdgcimmided/fonts/AvenirNextLTPro-Regular.otf') format('opentype');
-        font-weight: normal;
-        font-style: normal;
-    }
-    @font-face {
-        font-family: 'AvenirNextBold';
-        src: url('chrome-extension://bmikpgodpkclnkgmnpphehdgcimmided/fonts/AvenirNextLTPro-Bold.otf') format('opentype');
-        font-weight: bold;
-        font-style: normal;
-    }
-    .myki-preloader-input {
-        transform: translateX(0px) !important;
-    }
-</style></head>
+</head>
 <body>
   <header>
     <div>
@@ -39,6 +22,5 @@
     <p>Jetboy Studio is primarily run by <a href="https://github.com/konsumer">konsumer</a>. If you's like to see his extensive open-source contributions, check out <a href="http://konsumer.js.org/">konsumer.js.org</a>.
   </p></section>
   <footer>
-    
   </footer>
 </body></html>
